--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,5 @@ jobs:
       - name: Go Build
         run: go build -o superlcx cmd/main.go
 
-      - name: Compress binaries
-        uses: svenstaro/upx-action@v1-release
-        with:
-          file: superlcx
-          args: -9
+      - name: Go All Plugins
+        run: sh build_all_plugins.sh
