if you use build -tag plugin , superlcx can compiler without any middleware in elf.
every middleware will be load in runtime. can be build by scripts ./build_all_plugin

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Go Build
         run: go build -o superlcx cmd/main.go
 
+      - name: Go Build Without Middleware
+        run: go build -tag plugin -o superlcx cmd/main.go
+
       - name: Go All Plugins
         run: sh build_all_plugins.sh
