--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: go build -o superlcx cmd/main.go
 
       - name: Go Build Without Middleware
-        run: go build -tag plugin -o superlcx cmd/main.go
+        run: go build -tags plugin -o superlcx cmd/main.go
 
       - name: Go All Plugins
         run: sh build_all_plugins.sh
